# peanut-bread

./: .gitignore  Cargo.toml  package-lock.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  GameConstants.tsx  LandingPage.tsx  Popup.tsx  StatusIndicator.tsx  WebSocketContext.tsx  main.tsx
frontend/src/components/: Button.tsx  CreateGameBox.tsx  InputWithLabel.tsx  JoinGameBox.tsx  LandingPage.tsx  PlayerNameBox.tsx  RoomConfiguration.tsx  StatusIndicator.tsx
frontend/src/routes/: Room.tsx  Root.tsx
src/: Shuttle.toml  main.rs  protocol.rs  room_manager.rs  state.rs  types.rs  utils.rs
