[package]
name = "peanut-bread"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["ws"]}
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
futures-util = "0.3.30"
axum-macros = "0.4.2"
debug-ignore = "1.0.5"
tower-http = {version = "0.6.1", features = ["fs"]}
strum = "0.26.3"
strum_macros = "0.26.4"
log = "0.4.22"
env_logger = "0.11.5"
os = "0.1.0"
